<?xml version="1.0"?>
<package format="3">
  <name>test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="leoyu11285@gmail.com">mtrn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <depend>graph_msgs</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
